--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.3.6",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-cli": "^6.23.0",
+    "babel-preset-latest": "^6.22.0",
     "babelify": "^7.3.0",
     "browserify": "^14.1.0",
     "browserify-shim": "^3.8.6",
