--- a/package.json
+++ b/package.json
@@ -52,5 +52,8 @@
     "jquery": "global:jQuery",
     "backbone": "global:Backbone",
     "underscore": "global:_"
+  },
+  "dependencies": {
+    "lodash": "^4.17.4"
   }
 }
