Testing react filters

--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "underscore": "global:_"
   },
   "dependencies": {
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "react": "^15.5.3",
+    "react-dom": "^15.5.3"
   }
 }
