--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
   },
   "dependencies": {
     "lodash": "^4.17.4",
-    "react": "^15.5.3",
-    "react-dom": "^15.5.3"
+    "vue": "^2.2.6"
   }
 }
