--- a/package.json
+++ b/package.json
@@ -20,32 +20,34 @@
     "node": ">= 0.10.0"
   },
   "devDependencies": {
-    "autoprefixer": "^6.3.6",
+    "autoprefixer": "^8.3.0",
     "babel-cli": "^6.23.0",
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-latest": "^6.22.0",
-    "babelify": "^7.3.0",
-    "browserify": "^14.1.0",
+    "babelify": "^8.0.0",
+    "browserify": "^16.2.0",
     "browserify-shim": "^3.8.6",
     "cssnano": "^3.5.2",
     "envify": "^4.1.0",
     "gulp": "^3.8.11",
-    "gulp-bower": "0.0.13",
+    "gulp-bower": "^0.0.14",
     "gulp-concat": "^2.5.2",
     "gulp-copy": "^1.0.0",
-    "gulp-csso": "^2.0.0",
+    "gulp-csso": "^3.0.1",
     "gulp-jsmin": "^0.1.5",
-    "gulp-postcss": "^6.1.1",
+    "gulp-postcss": "^7.0.1",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.1.0",
+    "gulp-sass": "^4.0.1",
     "gulp-sort": "^2.0.0",
     "gulp-sourcemaps": "^2.4.1",
-    "gulp-uglify": "^2.0.1",
+    "gulp-uglify": "^3.0.0",
     "gulp-wp-pot": "^2.0.3",
     "gulp-zip": "^4.0.0",
     "merge-stream": "^1.0.1",
-    "run-sequence": "^1.0.2",
+    "run-sequence": "^2.2.0",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
+    "vinyl-source-stream": "^2.0.0",
     "vueify": "^9.4.1"
   },
   "browser": {
@@ -61,6 +63,7 @@
   },
   "dependencies": {
     "lodash": "^4.17.4",
+    "nouislider": "^11.1.0",
     "vue": "^2.2.6",
     "vuex": "^3.0.1"
   }
